# city-of-binds

./: .gitignore  README.md  setup.cfg
src/: WASD_builder.py  WASD_config.json  test.py
src/CityOfBinds/: __init__.py  bindfile.py  binds.py  slashcommands.py  wasdbind.py
tests/: scenarios.py  test_Bind.py  test_ToggleBind.py  test_WASDBind.py  test_bind.py
