[metadata]
name = CityOfBinds
version = 0.0.1
license = MIT
description = a module to help create city of heroes binds
long_description = file: README.rst
author = brandon wade
author_email = bwade.dev@gmail.com
classifiers=
   Development Status :: 1 - Planning
   License :: OSI Approved :: MIT License

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =

[options.packages.find]
where=src